--- a/changelog.html
+++ b/changelog.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>changelog Clone</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <script src="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.js"></script>
     <link rel="manifest" href="manifest.json" />
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/serviceWorker.js').then(registration => {
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          }, err => {
+            console.log('ServiceWorker registration failed: ', err);
+          });
+        });
+      }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.js"></script>
     <style>
       body {
         font-family: "Fira Code", Arial, sans-serif !important;
@@ -156,15 +167,6 @@
     </div>
     <button id="save">Save to JSON</button>
     <script>
-      if ("worker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker
-          .register("/worker.js")
-          .then(res => console.log("Service worker registered"))
-          .catch(err => console.error("Service worker registration failed", err));
-        });
-      }
-
       let data = [];
       let currentId = 1; // Initialize the ID counter
 
